--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-"Waarom het Sint-Oelbert Gymnasium een satanistisch-pedonetwerk is." 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OELBERT SATANISTISCHE PEDO RING EXPOSED</title>
+</head>
+<body>
+    <h1>OELBERT SATANISTISCHE PEDO RING</h1>
+    <br>
+    <p>Het is tijd dat iedereen de waarheid weet...</p>
+    <br>
+    <img src="https://oelbertexposed.github.io/" alt="">
+    <style>
+        body{
+            color: red;
 
-SATAN
-
-<img src="https://media.discordapp.net/attachments/1276555299939156023/1339220462970077264/image.png?ex=67adedbf&is=67ac9c3f&hm=08ccc4a311531d4b412c93c0f676ad4aaea4c08755e2b1f776c2a23a5067b9ac&=&format=webp&quality=lossless&width=481&height=411">
+            background: #000;
+        }
+    </style>
+</body>
+</html>
