--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         body{
             color: red;
-            text-style: center;
+            text-align: center;
             background: #000;
         }
     </style>
